--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "fuse",
+  "name": "uni-cmd",
   "version": "0.1.0",
   "description": "",
-  "main": "./fuse-cli/index.js",
+  "main": "./uni-cli/index.js",
   "dependencies": {
     "chokidar": "^3.4.0",
     "dom-parser": "^0.1.6",
@@ -12,16 +12,19 @@
     "ncp": "^2.0.0",
     "path": "^0.12.7"
   },
+  "keywords": [
+    "uni",
+    "UI",
+    "Framework",
+    "Frontend"
+  ],
   "devDependencies": {
-    "concurrently": "^5.2.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-serve": "^3.2.0"
+    "concurrently": "^5.2.0"
   },
-  "scripts": {
-    
-  },
+  "scripts": {},
   "bin": {
-    "fuse": "./fuse-cli/index.js"
+    "uni": "./uni-cli/index.js",
+    "unify": "./uni-cli/index.js"
   },
   "author": "Anthony Nguyen",
   "license": "ISC"
