--- a/uni-cli/res/package.json
+++ b/uni-cli/res/package.json
@@ -11,7 +11,7 @@
   },
   "scripts": {
     "dev": "",
-    "prod": "webpack --mode=production"
+    "build": "uni build"
   },
   "author": "",
   "license": "ISC"
