--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
     "name": "uni-cmd",
-    "version": "0.3.0",
+    "version": "0.3.1",
     "description": "Command Line Interface for Uni.js",
     "main": "./uni-cli/index.js",
     "dependencies": {
         "cheerio": "^1.0.0-rc.3",
         "chokidar": "^3.4.0",
         "figlet": "^1.4.0",
+        "fs-extra": "^9.0.1",
         "live-server": "^1.2.1",
-        "ncp": "^2.0.0",
         "path": "^0.12.7"
     },
     "keywords": [
@@ -29,6 +29,7 @@
         "uni": "./uni-cli/index.js",
         "unify": "./uni-cli/index.js"
     },
+    "publishConfig": { "registry": "https://npm.pkg.github.com/" },
     "author": "Anthony Nguyen",
     "license": "MIT"
 }
