--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "figlet": "^1.4.0",
         "fs-extra": "^9.0.1",
         "live-server": "^1.2.1",
-        "path": "^0.12.7"
+        "path": "^0.12.7",
+        "terser": "^4.8.0"
     },
     "keywords": [
         "uni",
